--- a/projects/templates/projects/single-project.html
+++ b/projects/templates/projects/single-project.html
@@ -1,6 +1,7 @@
 {% extends 'main.html' %} {% block content %} {% if project == None %}
 <h3>Page not found</h3>
 {% else %}
+<img style="max-width: 500px" src="{{project.featured_image.url}}" />
 <h1>{{project.title}}</h1>
 <hr />
 {% for tag in project.tags.all %}
