--- a/projects/templates/projects/project_form.html
+++ b/projects/templates/projects/project_form.html
@@ -1,7 +1,36 @@
 {% extends 'main.html' %} {%block content%}
-<h1>Project Form</h1>
-<form action="" method="post" enctype="multipart/form-data">
-  {% csrf_token %} {{form.as_p}}
-  <input type="submit" />
-</form>
+
+<main class="formPage my-xl">
+  <div class="content-box">
+    <div class="formWrapper">
+      <a class="backButton" href="{% url 'projects'%}"
+        ><i class="im im-angle-left"></i
+      ></a>
+      <br />
+
+      <form class="form" method="POST" enctype="multipart/form-data">
+        {% csrf_token %} {% for field in form%}
+        <!-- Input:Text -->
+        <div class="form__field">
+          <label for="formInput#text">{{field.label}}</label>
+          {{ field }}
+          <!-- <input
+            class="input input--text"
+            id="formInput#text"
+            type="text"
+            name="text"
+            placeholder="Enter {{field.label}}"
+          /> -->
+        </div>
+        {% endfor %}
+        <input
+          class="btn btn--sub btn--lg my-md"
+          type="submit"
+          value="Submit"
+        />
+      </form>
+    </div>
+  </div>
+</main>
+
 {% endblock content%}
