--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -43,7 +43,7 @@
                 <h3 class="project__title">{{project.title}}</h3>
                 <p>
                   <a class="project__author" href="profile.html"
-                    >By Dennis Ivanov</a
+                    >By {{project.owner}}</a
                   >
                 </p>
                 <p class="project--rating">
