--- a/users/templates/users/profiles.html
+++ b/users/templates/users/profiles.html
@@ -33,7 +33,7 @@
         <div class="column card">
           {% for profile in profiles %}
           <div class="dev">
-            <a href="/profile.html" class="card__body">
+            <a href="{% url 'user-profile' profile.id %}" class="card__body">
               <div class="dev__profile">
                 <img
                   class="avatar avatar--md"
