--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -42,8 +42,10 @@
               <div class="card__body">
                 <h3 class="project__title">{{project.title}}</h3>
                 <p>
-                  <a class="project__author" href="profile.html"
-                    >By {{project.owner}}</a
+                  <a
+                    class="project__author"
+                    href="{% url 'user-profile' project.owner.id %}"
+                    >By {{project.owner.name}}</a
                   >
                 </p>
                 <p class="project--rating">
