--- a/templates/nav.html
+++ b/templates/nav.html
@@ -20,13 +20,19 @@
           <a href="{% url 'projects' %}">Projects</a>
         </li>
         <li class="header__menuItem"><a href="">Inbox</a></li>
+
+        {% if request.user.is_authenticated %}
         <li class="header__menuItem">
           <a href="{% url 'create-project' %}">Add Project</a>
         </li>
-
         <li class="header__menuItem">
-          <a href="" class="btn btn--sub">Login/Sign Up</a>
+          <a href="{% url 'login' %}" class="btn btn--sub">Sign Out</a>
         </li>
+        {% else %}
+        <li class="header__menuItem">
+          <a href="{% url 'logout' %}" class="btn btn--sub">Sign In</a>
+        </li>
+        {% endif %}
       </ul>
     </nav>
   </div>
