--- a/templates/nav.html
+++ b/templates/nav.html
@@ -26,11 +26,11 @@
           <a href="{% url 'create-project' %}">Add Project</a>
         </li>
         <li class="header__menuItem">
-          <a href="{% url 'login' %}" class="btn btn--sub">Sign Out</a>
+          <a href="{% url 'logout' %}" class="btn btn--sub">Sign Out</a>
         </li>
         {% else %}
         <li class="header__menuItem">
-          <a href="{% url 'logout' %}" class="btn btn--sub">Sign In</a>
+          <a href="{% url 'login' %}" class="btn btn--sub">Sign In</a>
         </li>
         {% endif %}
       </ul>
