--- a/users/templates/users/login_register.html
+++ b/users/templates/users/login_register.html
@@ -1,8 +1,56 @@
-{% extends 'main.html' %} {% block content %}
-<form action="{% url 'login' %}" method="post">
-  {% csrf_token %}
-  <input type="text" name="username" id="" placeholder="Username" />
-  <input type="password" name="password" id="" placeholder="Enter password" />
-  <input type="submit" value="Login" />
+{% extends 'main.html' %} {% load static %} {% block content %} {% if page ==
+'register' %}
+<h1>Register User</h1>
+<form action="{% url 'register' %}" method="post">
+  {% csrf_token %} {{ form.as_p }}
+  <input type="submit" name="" id="" value="Register" />
 </form>
-{% endblock content %}
+<p>Already have an account? <a href="{% url 'login' %}">Login</a></p>
+{% else %}
+<div class="auth">
+  <div class="card">
+    <div class="auth__header text-center">
+      <a href="/">
+        <img src="{% static 'images/icon.svg' %}" alt="icon" />
+      </a>
+      <h3>Account Login</h3>
+      <p>Hello Developer, Welcome Back!</p>
+    </div>
+
+    <form action="#" class="form auth__form">
+      {% csrf_token %}
+      <!-- Input:Email -->
+      <div class="form__field">
+        <label for="formInput#text">Username: </label>
+        <input
+          class="input input--text"
+          id="formInput#text"
+          type="text"
+          name="username"
+          placeholder="Enter your username..."
+        />
+      </div>
+
+      <!-- Input:Password -->
+      <div class="form__field">
+        <label for="formInput#password">Password: </label>
+        <input
+          class="input input--password"
+          id="formInput#passowrd"
+          type="password"
+          name="password"
+          placeholder="••••••••"
+        />
+      </div>
+      <div class="auth__actions">
+        <input class="btn btn--sub btn--lg" type="submit" value="Log In" />
+        <a href="forgetpassword.html">Forget Password?</a>
+      </div>
+    </form>
+    <div class="auth__alternative">
+      <p>Don’t have an Account?</p>
+      <a href="{% url 'register' %}">Sign Up</a>
+    </div>
+  </div>
+</div>
+{% endif %} {% endblock %}
