--- a/users/templates/users/login_register.html
+++ b/users/templates/users/login_register.html
@@ -1,5 +1,4 @@
-{% extends 'main.html' %} {% block content %} {% load static %} {% if (page ==
-'register') %}
+{% extends 'main.html' %} {% block content %} {% load static %} {% if page == 'register' %}
 <h1>Register User</h1>
 <form action="{% url 'register' %}" method="post">
   {% csrf_token %} {{ form.as_p }}
