--- a/users/templates/users/login_register.html
+++ b/users/templates/users/login_register.html
@@ -1,11 +1,45 @@
-{% extends 'main.html' %} {% block content %} {% load static %} {% if page == 'register' %}
-<h1>Register User</h1>
-<form action="{% url 'register' %}" method="post">
-  {% csrf_token %} {{ form.as_p }}
-  <input type="submit" name="" id="" value="Register" />
-</form>
-<p>Already have an account? <a href="{% url 'login' %}">Login</a></p>
+{% extends 'main.html' %} {% load static %} {% block content %} {% if page == 'register' %}
+
+ <div class="auth">
+      <div class="card">
+        <div class="auth__header text-center">
+          <a href="{% url 'profiles' %}">
+            <img src="{% static 'images/icon.svg' %}" alt="icon" />
+          </a>
+          <h3>Account Registration</h3>
+          <p>Create a new developer account</p>
+        </div>
+
+        <form action="{% url 'register' %}" class="form auth__form" method="post">
+			{% csrf_token %}
+			{% for field in form %}
+				<div class="form__field">
+				<label for="formInput#text">{{field.label}}</label>
+				{{field}}
+				
+				
+				
+				{% for error in field.errors %}
+				<p style="color: red">{{ error }}</p>
+				{% endfor %}
+			  </div>
+			{% endfor %}
+
+          <!-- Input:Text -->
+          
+          <div class="auth__actions">
+            <input class="btn btn--sub btn--lg" type="submit" value="Sign  In" />
+          </div>
+        </form>
+        <div class="auth__alternative">
+          <p>Already have an Account?</p>
+          <a href="{% url 'login' %}">Log In</a>
+        </div>
+      </div>
+    </div>
+	
 {% else %}
+
 <div class="auth">
   <div class="card">
     <div class="auth__header text-center">
