--- a/users/templates/users/login_register.html
+++ b/users/templates/users/login_register.html
@@ -1,43 +1,43 @@
 {% extends 'main.html' %} {% load static %} {% block content %} {% if page == 'register' %}
 
- <div class="auth">
-      <div class="card">
-        <div class="auth__header text-center">
-          <a href="{% url 'profiles' %}">
-            <img src="{% static 'images/icon.svg' %}" alt="icon" />
-          </a>
-          <h3>Account Registration</h3>
-          <p>Create a new developer account</p>
-        </div>
-
-        <form action="{% url 'register' %}" class="form auth__form" method="post">
-			{% csrf_token %}
-			{% for field in form %}
-				<div class="form__field">
-				<label for="formInput#text">{{field.label}}</label>
-				{{field}}
-				
-				
-				
-				{% for error in field.errors %}
-				<p style="color: red">{{ error }}</p>
-				{% endfor %}
-			  </div>
-			{% endfor %}
-
-          <!-- Input:Text -->
-          
-          <div class="auth__actions">
-            <input class="btn btn--sub btn--lg" type="submit" value="Sign  In" />
-          </div>
-        </form>
-        <div class="auth__alternative">
-          <p>Already have an Account?</p>
-          <a href="{% url 'login' %}">Log In</a>
-        </div>
-      </div>
+<div class="auth">
+  <div class="card">
+    <div class="auth__header text-center">
+      <a href="/">
+        <img src="{% static 'images/icon.svg' %}" alt="icon" />
+      </a>
+      <h3>Register an Account</h3>
+      <p>Create a new developer account</p>
     </div>
-	
+
+    <form method="POST" action="{% url 'register' %}" class="form auth__form">
+      {% csrf_token %} {% for field in form %}
+      <div class="form__field">
+        <label for="formInput#text">{{field.label}}</label>
+        {{field}}
+
+        <!-- {% if field.help_text %}
+                <small>{{field.help_text}}</small>
+                {% endif %} -->
+
+        {% for error in field.errors %}
+        <p style="color: red">{{error}}</p>
+        {% endfor %}
+      </div>
+
+      {% endfor %}
+
+      <div class="auth__actions">
+        <input class="btn btn--sub btn--lg" type="submit" value="Sign  In" />
+      </div>
+    </form>
+    <div class="auth__alternative">
+      <p>Already have an Account?</p>
+      <a href="{% url 'login' %}">Log In</a>
+    </div>
+  </div>
+</div>
+
 {% else %}
 
 <div class="auth">
@@ -50,9 +50,9 @@
       <p>Hello Developer, Welcome Back!</p>
     </div>
 
-    <form action="#" class="form auth__form">
+    <form action="" method="POST" class="form auth__form">
       {% csrf_token %}
-      <!-- Input:Email -->
+      <!-- Input:Username -->
       <div class="form__field">
         <label for="formInput#text">Username: </label>
         <input
@@ -75,15 +75,18 @@
           placeholder="••••••••"
         />
       </div>
+
       <div class="auth__actions">
         <input class="btn btn--sub btn--lg" type="submit" value="Log In" />
-        <a href="forgetpassword.html">Forget Password?</a>
+        <a href="">Forget Password?</a>
       </div>
     </form>
+
     <div class="auth__alternative">
       <p>Don’t have an Account?</p>
       <a href="{% url 'register' %}">Sign Up</a>
     </div>
   </div>
 </div>
-{% endif %} {% endblock %}
+
+{% endif %} {% endblock content %}
