--- a/templates/main.html
+++ b/templates/main.html
@@ -37,7 +37,7 @@
     {% for message in messages %}
     <div class="alert  alert--{{message.tags}}">
         <p class="alert__message">{{message}}</p>
-        <button class="alert__close">x</button>
+        <button style="z-index: 999" class="alert__close">x</button>
     </div>
 
     {% endfor %}
