--- a/templates/nav.html
+++ b/templates/nav.html
@@ -23,7 +23,7 @@
 
         {% if request.user.is_authenticated %}
         <li class="header__menuItem">
-          <a href="{% url 'create-project' %}">Add Project</a>
+          <a href="{% url 'account' %}">Account</a>
         </li>
         <li class="header__menuItem">
           <a href="{% url 'logout' %}" class="btn btn--sub">Sign Out</a>
