--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -15,11 +15,11 @@
               class="input input--text"
               id="formInput#search"
               type="text"
-              name="text"
+              name="search_query"
               placeholder="Search by Project Title"
+              value="{{search_query}}"
             />
           </div>
-
           <input class="btn btn--sub btn--lg" type="submit" value="Search" />
         </form>
       </div>
