--- a/templates/main.html
+++ b/templates/main.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 {% load static %}
 <html>
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,19 +9,20 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <!-- Icon - IconMonster -->
-    <link rel="stylesheet" href="https://cdn.iconmonstr.com/1.3.0/css/iconmonstr-iconic-font.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.iconmonstr.com/1.3.0/css/iconmonstr-iconic-font.min.css"
+    />
     <!-- Mumble UI -->
     <link rel="stylesheet" href="{% static 'uikit/styles/uikit.css' %}" />
     <!-- Dev Search UI -->
     <link rel="stylesheet" href="{% static 'styles/app.css' %}" />
 
     <title>DevSearch - Connect with Developers!</title>
+  </head>
 
-</head>
-
-<body>
+  <body>
     {% include 'nav.html' %}
-
 
     <!-- {% if messages %}
     <ul class="messages">
@@ -32,24 +32,14 @@
     </ul>
     {% endif %} -->
 
-    {% if messages %}
-
-    {% for message in messages %}
+    {% if messages %} {% for message in messages %}
     <div class="alert  alert--{{message.tags}}">
-        <p class="alert__message">{{message}}</p>
-        <button style="z-index: 999" class="alert__close">x</button>
+      <p class="alert__message">{{message}}</p>
+      <button style="z-index: 999" class="alert__close">x</button>
     </div>
 
-    {% endfor %}
-
-    {% endif %}
-
-
-    {% block content %}
-
-    {% endblock content %}
-	<script src="{% static 'uikit/app.js' %}"></script>
-</body>
-
-
+    {% endfor %} {% endif %} {% block content %} {% endblock content %}
+    <script src="{% static 'uikit/app.js' %}"></script>
+    <script src="{% static 'js/main.js' %}"></script>
+  </body>
 </html>
