--- a/users/templates/users/profiles.html
+++ b/users/templates/users/profiles.html
@@ -9,7 +9,12 @@
       </div>
 
       <div class="hero-section__search">
-        <form class="form" action="{% url 'profiles' %}" method="get">
+        <form
+          id="searchForm"
+          class="form"
+          action="{% url 'profiles' %}"
+          method="get"
+        >
           <div class="form__field">
             <label for="formInput#search">Search Developers </label>
             <input
@@ -63,4 +68,5 @@
   </section>
 </main>
 
+{% include 'pagination.html' with queryset=profiles custom_range=custom_range %}
 {% endblock content %}
