--- a/projects/templates/projects/single-project.html
+++ b/projects/templates/projects/single-project.html
@@ -54,6 +54,8 @@
               {% endfor %}
               <input class="btn btn--sub btn--lg" type="submit" value="Add Review" />
             </form>
+            {% else %}
+            <a href="{% url 'login' %}?next={{request.path}}">Login here to review</a>
             {% endif %}
             <div class="commentList">
               {% for review in project.review_set.all %}
