Make sure, user can't send himself a message

--- a/users/templates/users/user-profile.html
+++ b/users/templates/users/user-profile.html
@@ -58,11 +58,13 @@
               </li>
               {% endif %}
             </ul>
+            {% if request.user.profile.id != profile.id %}
             <a
               href="{% url 'send-message' profile.id %}?next={{request.path}}"
               class="btn btn--sub btn--lg"
               >Send Message
             </a>
+            {% endif %}
           </div>
         </div>
       </div>
