--- a/users/templates/users/message_form.html
+++ b/users/templates/users/message_form.html
@@ -3,26 +3,32 @@
 <main class="formPage my-xl">
   <div class="content-box">
     <div class="formWrapper">
-      <a class="backButton" href="{% url 'account' %}"
+      <a class="backButton" href="{% url 'user-profile' recepient.id %}"
         ><i class="im im-angle-left"></i
       ></a>
       <br />
 
       <form class="form" method="POST" enctype="multipart/form-data">
-        {% csrf_token %} {% for field in form%}
-        <!-- Input:Text -->
+        {% csrf_token %} {% if request.user.is_authenticated is False %}
         <div class="form__field">
-          <label for="formInput#text">{{field.label}}</label>
-          {{ field }}
-          <!-- <input
-            class="input input--text"
-            id="formInput#text"
-            type="text"
-            name="text"
-            placeholder="Enter {{field.label}}"
-          /> -->
+          <label for="formInput#text">{{form.name.label}}</label>
+          {{ form.name }}
         </div>
-        {% endfor %}
+        <div class="form__field">
+          <label for="formInput#text">{{form.email.label}}</label>
+          {{ form.email }}
+        </div>
+        {% endif %}
+        <div class="form__field">
+          <label for="formInput#text">{{form.subject.label}}</label>
+          {{ form.subject }}
+        </div>
+
+        <div class="form__field">
+          <label for="formInput#text">{{form.body.label}}</label>
+          {{ form.body }}
+        </div>
+
         <input
           class="btn btn--sub btn--lg my-md"
           type="submit"
