Add logic to remove tags

--- a/projects/templates/projects/project_form.html
+++ b/projects/templates/projects/project_form.html
@@ -3,7 +3,7 @@
 <main class="formPage my-xl">
   <div class="content-box">
     <div class="formWrapper">
-      <a class="backButton" href="{% url 'projects'%}"
+      <a class="backButton" href="{% url 'account' %}"
         ><i class="im im-angle-left"></i
       ></a>
       <br />
@@ -14,15 +14,30 @@
         <div class="form__field">
           <label for="formInput#text">{{field.label}}</label>
           {{ field }}
-          <!-- <input
-            class="input input--text"
-            id="formInput#text"
-            type="text"
-            name="text"
-            placeholder="Enter {{field.label}}"
-          /> -->
         </div>
         {% endfor %}
+
+        <div class="form_field">
+          {% for tag in project.tags.all %}
+          <div
+            class="project-tag tag tag--pill tag--main"
+            data-tag="{{tag.id}}"
+            data-project="{{project.id}}"
+          >
+            {{tag.name}} &#215;
+          </div>
+          {% endfor %}
+        </div>
+
+        <div class="form__field">
+          <label for="formInput#text">Tags</label>
+          <textarea
+            name="newtags"
+            id=""
+            class="input"
+            placeholder="Add tags here..."
+          ></textarea>
+        </div>
         <input
           class="btn btn--sub btn--lg my-md"
           type="submit"
@@ -33,4 +48,4 @@
   </div>
 </main>
 
-{% endblock content%}
+{% endblock %}
