--- a/projects/templates/projects/single-project.html
+++ b/projects/templates/projects/single-project.html
@@ -26,8 +26,8 @@
           {% endif %}
         </div>
         <div class="column column--2of3">
-          <img class="singleProject__preview" src="{{project.featured_image.url}}" alt="{{project.title}} thumbnail" />
-          <a href="profile.html" class="singleProject__developer">By {{project.owner}}</a>
+          <img class="singleProject__preview" src="{{project.imageUrl}}" alt="{{project.title}} thumbnail" />
+          <a href="{% url 'user-profile' project.owner.id %}" class="singleProject__developer">By {{project.owner}}</a>
           <h2 class="singleProject__title">{{project.title}}</h2>
           <h3 class="singleProject__subtitle">About the Project</h3>
           <div class="singleProject__info">
@@ -63,7 +63,7 @@
               <div class="comment">
                 <a href="{% url 'user-profile' review.owner.id %}">
                   <img class="avatar avatar--md"
-                    src="{{review.owner.profile_image.url}}" alt="user" />
+                    src="{{ review.owner.imageUrl }}" alt="user" />
                 </a>
                 <div class="comment__details">
                   <a href="{% url 'user-profile' review.owner.id %}" class="comment__author">{{review.owner.name}}</a>
