--- a/users/templates/users/profiles.html
+++ b/users/templates/users/profiles.html
@@ -43,7 +43,7 @@
               <div class="dev__profile">
                 <img
                   class="avatar avatar--md"
-                  src="{{profile.profile_image.url}}"
+                  src="{{profile.imageUrl}}"
                   alt="image"
                 />
                 <div class="dev__meta">
